tests/NormalTests/paczka1/fuzzy1/29208510.err
Error in line 9: D1OemyTCk A459 10,9
Error in line 24: Z7F A459 53,7
Error in line 31: WDFABeV S946 85,0
